--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         Hello, World!
-        <p>testing git pull</p>
+        <p>testing git pull!</p>
     </body>
 </html>
